--- a/experiment/simulation/inv/exp.html
+++ b/experiment/simulation/inv/exp.html
@@ -2,7 +2,7 @@
 
 <head>
 	<title>Inverting Comparator</title>
-	<link rel="stylesheet" href="./src/expstyle.css">
+	<link rel="stylesheet" href="./css/expstyle.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -209,7 +209,7 @@
 		</div>
 
 		<div>
-			<img style="left: 0em;top: 5em;position: absolute;/* z-index: -1; */" src="./images/setup.png" height="30%"
+			<img style="left: 0em;top: 5em;position: absolute;/* z-index: -1; */" src="./images/setup.PNG" height="30%"
 				width="58.5%">
 		</div>
 		<div
