--- a/experiment/simulation/ninv/exp.html
+++ b/experiment/simulation/ninv/exp.html
@@ -2,7 +2,7 @@
 
 <head>
 	<title>Non-Inverting Comparator</title>
-	<link rel="stylesheet" href="./src/expstyle.css">
+	<link rel="stylesheet" href="./css/expstyle.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -222,7 +222,7 @@
 		</div>
 
 		<div>
-			<img style="left: 3em;top: 5em;position: absolute;/* z-index: -1; */" src="./images/setup.png" height="28%"
+			<img style="left: 3em;top: 5em;position: absolute;/* z-index: -1; */" src="./images/setup.PNG" height="28%"
 				width="54.5%">
 		</div>
 		<div id="led" style="position:absolute;z-index:10;left: 29.6%;top: 32.8%;width: 3%;height: 15%;"></div>
