--- a/experiment/simulation/ninv/simulate.html
+++ b/experiment/simulation/ninv/simulate.html
@@ -1,6 +1,6 @@
 <head>
-	<link rel="stylesheet" href="./src/simstyle.css">
-	<title>Inverting Comparator</title>
+	<link rel="stylesheet" href="./css/simstyle.css">
+	<title>Non-Inverting Comparator</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
@@ -8,20 +8,21 @@
 		crossorigin="anonymous"></script>
 </head>
 
-<body bgcolor="#228b22" style="width:95em">
+<body bgcolor="white" style="width:95em">
 	<div class="exp">
-		<p style="background-color: #044ca3;color:white;font-size:30px;text-align:center">Inverting Comparator</p>
+		<p style="background-color: #044ca3;color:white;font-size:30px;text-align:center">Non-Inverting Comparator</p>
 		<a id="myBtn" href="#"><button id="myBtn" class="btn btn-danger"
-			style="position: absolute;margin-top: -6px;left: 91.5%;">Instructions</button></a>
+				style="position: absolute;margin-top: -5px;
+				left: 91.5%;">Instructions</button></a>
 		<div class="image">
 			<img style="margin-left:17.9%;position:absolute;top:12em;" src="./images/meter.png" height=100
 				width=150></img>
-			<img style="margin-left:29.5%;" src="./images/circuit.png" height=350 width=650></img>
-			<img style="margin-left:16px;position:absolute;top:127px;" src="./images/osscope.png" height=90
+			<img style="margin-left:29.5%;" src="./images/circuit.PNG" height=350 width=650></img>
+			<img style="margin-left:16px;position:absolute;top:127px;" src="./images/osscope.PNG" height=90
 				width=150></img>
 		</div>
 		<div><b style="position: absolute;top: 20em;left: 17em;">Input Voltmeter</b></div>
-		<div style="position: absolute;left: 69em;top: 16em;"><b>Oscilloscope</b></div>
+		<div style="position: absolute;left: 69em;top: 15.8em;"><b>Oscilloscope</b></div>
 		<div>
 			<p id="dragDropWindow1"></p>
 			<p id="dragDropWindow2"></p>
@@ -36,7 +37,7 @@
 		<!-- Division for buttons-->
 
 		<div class="top">
-			<form action="exp.html" method="post" style="width:100%;text-align:right">
+			<form action="exp.html" method="" style="width:100%;text-align:right">
 				<div class="button"><button class="b1 btn btn-danger" type="button" id="check" value="CHECK"
 						style="width: 200px;">Check Connections</button></div>
 				<div class="button"><button type="submit" id="start" style="cursor:not-allowed;width: 100px;"
@@ -60,14 +61,14 @@
 					<h2>Instructions</h2>
 				</div>
 				<div class="modal-body">
-					<center><img src="./images/setup.png" alt="setup" width="600" height="250"></center>
+					<center><img src="./images/setup.PNG" alt="setup" width="600" height="250"></center>
 					<p>
-						<ol type="1" style="font-size:17px;font-family:Courier;">
-							<li>Connect the components as mentioned below:<br>(1-3),(2-4),(5-7),(6-8)</li>
-							<li>Click on <b>'Check</b> button to check the
-								connections. If connected connections are wrong, Make the right connection as per given instruction.</li>
-							<li>If connections are right, Click on the<b>'Start'</b> button to perform the experiment.</li>
-						</ol>
+					<ol type="1" style="font-size:17px;font-family:Courier;">
+						<li>Connect the components as mentioned below:<br>(1-3),(2-4),(5-7),(6-8)</li>
+						<li>Click on <b>'Check</b> button to check the
+							connections. If connected connections are wrong, Make the right connection as per given instruction.</li>
+						<li>If connections are right, Click on the<b>'Start'</b> button to perform the experiment.</li>
+					</ol>
 					</p><br />
 					<!-- <label>Note:</label><b>Donot start before properly connecting the wires.</b> -->
 				</div>
@@ -103,6 +104,6 @@
 			}
 		}
 	</script>
-	<script src="./src/jsplumb.js"></script>
-	<script src="./src/demo.js"></script>
+	<script src="./js/jsplumb.js"></script>
+	<script src="./js/demo.js"></script>
 </body>
