--- a/experiment/simulation/inv/exp.html
+++ b/experiment/simulation/inv/exp.html
@@ -150,12 +150,29 @@
 				}
 			}
 			function updateAll() {
+
+              let toggle =1;
+
+			  if(toggle === 1)  {
+
+				document.getElementById('stop').disabled = 0;
+
+			  }
+
+			  else{
+
+				document.getElementById('stop').disabled= 1;
+			  }
+
 				f = f + temp;
 				temp = f - temp;
 				f = f - temp;
 				display();
 			}
+
+
 			function display() {
+
 				if (f == 0) {
 					document.getElementById("x").value = "";
 					document.getElementById("y").value = "";
@@ -181,7 +198,11 @@
 					document.getElementById("x").value = val + "mV";
 					document.getElementById("y").value = "";
 				}
-				else alert("Please POWER ON before you read values ");
+				else if(f==0) {
+
+
+					document.getElementById('stop').disabled=true;
+				}
 			}
 
 		</script>
@@ -229,7 +250,7 @@
 			<br>
 			<tr style="position: absolute;top: 24%;right: 8.5%;">
 				<th><b>Voltage (in V)</b></th>
-				<td><input type="range" min="1" max="15" step="0.1" onchange="insert()"
+				<td><input type="range" min="1" max="15" step="0.1" disabled="1" onchange="insert()"
 						oninput="updateTextBox(this.value)" id="stop" value="0"></td>
 
 			</tr>
