--- a/experiment/simulation/inv/simulate.html
+++ b/experiment/simulation/inv/simulate.html
@@ -56,7 +56,7 @@
 		<div id="myModal" class="modal">
 			<div class="modal-content" style="position: absolute;width: 68%;top: 4%;left: 3%;">
 				<div class="modal-header">
-					<span class="close">×</span>
+					<span class="close">&times;</span>
 					<h2>Instructions</h2>
 				</div>
 				<div class="modal-body">
