--- a/experiment/simulation/inv/exp.html
+++ b/experiment/simulation/inv/exp.html
@@ -189,7 +189,8 @@
 			}
 			function stop() {
 				alert("You cannot read more values");
-				//document.getElementById("stop").disabled="true";
+				// document.getElementById('btn12').disabled = true;
+				document.getElementById("stop").disabled="true";
 			}
 
 			function updateTextBox(val) {
@@ -276,6 +277,7 @@
 									background-color:#D3D3D3;
 									color:black;
 									position: absolute;
+									text-align: center;
     top: -33px;
     left: -37px;
 									" disabled />
@@ -318,7 +320,7 @@
 			<!-- unit=2V</p> -->
 		</div>
 		<div class="graph">
-			<button class="btn btn-danger" onclick="plot()" style="    position: absolute;
+			<button class="btn btn-danger" id="btn12" onclick="plot()" style="    position: absolute;
 			top: -37px;width: 100px;">Plot</button>
 			<div style="position:absolute;bottom:99.6%;left:28.5%;"><button class="btn btn-danger" id="button1"
 					onclick="printf()" style="width: 100px;">Print</button><br /></div>
